Implement design section on review page

--- a/frontend/src/designForm/index.html
+++ b/frontend/src/designForm/index.html
@@ -14,10 +14,6 @@
       <h1 class="display-4">Design Form</h1>
       <div class="col-xl-5 col-lg-6 col-md-8 col-11 mb-3 ">
         <hr class="border border-primary border-3 opacity-75">
-        <label class="form-label" for="numberOfDesigns">Number Of Designs</label>
-        <input class="form-control border border-dark" type="text" name="numberOfDesigns" id="numberOfDesigns" value="1"
-          placeholder="example: 1">
-        <hr class="border border-primary border-3 opacity-75">
       </div>
       <div class="row d-flex justify-content-center align-items-center">
         <div class="col-xl-3 col-lg-2 col-md-2 col-2 mb-2 ">
@@ -287,7 +283,8 @@
             <button class="form-control btn btn-outline-secondary" id="resetButton" type="reset">Reset</button>
           </div>
           <div class="col-md-3 col-6 ps-2">
-            <input class="form-control btn btn-primary" id="submitButton" type="submit" value="Submit">
+            <button class="btn btn-primary btn-sm float-right" id="submitButton" type="button">Submit
+            </button>
           </div>
           <div class="col-md-3 col-6 ps-2">
             <button class="btn btn-primary btn-sm float-right" id="nextDesignBottom" style="color:white" type="button">
