Add padding to output boxes to make them more legible

--- a/frontend/src/orderReview/index.html
+++ b/frontend/src/orderReview/index.html
@@ -78,7 +78,8 @@
           <div class="form-inline">
             <div class="form-group">
               <label class="form-label" for="customerName">Customer Name: </label>
-              <output class="form-inline border border-dark" type="text" name="customerName" id="customerName">
+              <output class="form-inline border border-dark" type="text" name="customerName" id="customerName"
+                style="padding:5px">
             </div>
           </div>
         </div>
@@ -87,7 +88,8 @@
         <div class="d-flex flex-column justify-content-center align-items-center">
           <div class="form-group form-inline">
             <label class="form-label" for="organization">Organization: </label>
-            <output class="form-inline border border-dark" type="text" name="organization" id="organization">
+            <output class="form-inline border border-dark" type="text" name="organization" id="organization"
+              style="padding:5px">
           </div>
         </div>
 
@@ -97,12 +99,12 @@
             <row>
               <!-- Phone -->
               <label class="form-label" for="phone">Phone: </label>
-              <output class="form-inline border border-dark" type="tel" name="phone" id="phone">
+              <output class="form-inline border border-dark" type="tel" name="phone" id="phone" style="padding:5px">
             </row>
             <row>
               <!-- Email -->
               <label class="form-label" for="email">Email: </label>
-              <output class="form-inline border border-dark" type="email" name="email" id="email">
+              <output class="form-inline border border-dark" type="email" name="email" id="email" style="padding:5px">
             </row>
           </div>
         </div>
@@ -125,13 +127,13 @@
           <!-- Design Description -->
           <div class="d-flex flex-column justify-content-center align-items-center">
             <label class="form-label" for="description">Description </label>
-            <output class="form border border-dark" type="text" name="description" id="description">
+            <output class="form border border-dark" type="text" name="description" id="description" style="padding:5px">
           </div>
 
           <!-- Design Notes -->
           <div class="d-flex flex-column justify-content-center align-items-center">
-            <label class="form-label" for="designNotes">Design Notes: </label>
-            <output class="form border border-dark" type="text" name="designNotes" id="designNotes">
+            <label class="form-label" for="designNotes">Design Notes </label>
+            <output class="form border border-dark" type="text" name="designNotes" id="designNotes" style="padding:5px">
           </div>
 
           <!-- Design Image -->
@@ -139,14 +141,15 @@
             <label class="form-label">Design Image</label>
             <!-- <input class="form-control border border-dark" type="text" name="designImages" id="designImages" 
                       placeholder="Upload Image">-->
-            <img src="https://i.stack.imgur.com/H0xdb.png" class="d-block w-100" alt="...">
+            <img src="https://i.stack.imgur.com/H0xdb.png" class="img-thumbnail" alt="...">
           </div>
 
           <!-- Design Type -->
           <div class="d-flex flex-column justify-content-center align-items-center">
             <div class="form-group form-inline">
               <label class="form-label" for="designType">Design Type: </label>
-              <output class="form-inline border border-dark" type="text" name="designType" id="designType">
+              <output class="form-inline border border-dark" type="text" name="designType" id="designType"
+                style="padding:5px">
             </div>
           </div>
 
@@ -157,7 +160,7 @@
               <div class="form-group form-inline">
                 <label class="form-label" for="designNumberGarments">Number Of Garments: </label>
                 <output class="form-inline border border-dark" type="text" name="designNumberGarments"
-                  id="designNumberGarments">
+                  id="designNumberGarments" style="padding:5px">
               </div>
             </div>
 
@@ -174,13 +177,14 @@
                     <row>
                       <!-- Gender -->
                       <label class="form-label" for="garmentGender">Gender: </label>
-                      <output class="form-inline border border-dark" type="text" name="garmentGender"
-                        id="garmentGender">
+                      <output class="form-inline border border-dark" type="text" name="garmentGender" id="garmentGender"
+                        style="padding:5px">
                     </row>
                     <row>
                       <!-- Size -->
                       <label class="form-label" for="garmentSize">Size: </label>
-                      <output class="form-inline border border-dark" type="text" name="garmentSize" id="garmentSize">
+                      <output class="form-inline border border-dark" type="text" name="garmentSize" id="garmentSize"
+                        style="padding:5px">
                     </row>
                   </div>
                 </div>
@@ -191,7 +195,7 @@
                     <div class="form-group">
                       <label class="form-label" for="garmentStyleNumber">Style Number: </label>
                       <output class="form-inline border border-dark" type="text" name="garmentStyleNumber"
-                        id="garmentStyleNumber">
+                        id="garmentStyleNumber" style="padding:5px">
                     </div>
                   </div>
                 </div>
@@ -202,14 +206,14 @@
                     <row>
                       <!-- Amount -->
                       <label class="form-label" for="garmentAmount">Amount: </label>
-                      <output class="form-inline border border-dark" type="text" name="garmentAmount"
-                        id="garmentAmount">
+                      <output class="form-inline border border-dark" type="text" name="garmentAmount" id="garmentAmount"
+                        style="padding:5px">
                     </row>
                     <row>
                       <!-- Cost Per Item -->
                       <label class="form-label" for="garmentCostPer">Cost Per: </label>
                       <output class="form-inline border border-dark" type="text" name="garmentCostPer"
-                        id="garmentCostPer">
+                        id="garmentCostPer" style="padding:5px">
                     </row>
                   </div>
                 </div>
@@ -220,7 +224,7 @@
                     <div class="form-group">
                       <label class="form-label" for="garmentTotalCost">Garment Cost: </label>
                       <output class="form-inline border border-dark" type="text" name="garmentTotalCost"
-                        id="garmentTotalCost">
+                        id="garmentTotalCost" style="padding:5px">
                     </div>
                   </div>
                 </div>
@@ -234,8 +238,8 @@
             <div class="form-inline">
               <div class="form-group">
                 <label class="form-label" for="designTotalItems">Items In Design: </label>
-                <output class="form-inline border border-dark" type="text" name="designTotalItems"
-                  id="designTotalItems">
+                <output class="form-inline border border-dark" type="text" name="designTotalItems" id="designTotalItems"
+                  style="padding:5px">
               </div>
             </div>
           </div>
@@ -245,7 +249,8 @@
             <div class="form-inline">
               <div class="form-group">
                 <label class="form-label" for="designTotalCost">Design Cost: </label>
-                <output class="form-inline border border-dark" type="text" name="designTotalCost" id="designTotalCost">
+                <output class="form-inline border border-dark" type="text" name="designTotalCost" id="designTotalCost"
+                  style="padding:5px">
               </div>
             </div>
           </div>
@@ -267,13 +272,14 @@
             <row>
               <!-- Order Date -->
               <label class="form-label" for="orderDate">Order Date: </label>
-              <output class="form-inline border border-dark" type="date" name="orderDate" id="orderDate">
+              <output class="form-inline border border-dark" type="date" name="orderDate" id="orderDate"
+                style="padding:5px">
             </row>
             <row>
               <!-- Delivery Date -->
               <label class="form-label" for="requestedDeliveryDate">Delivery Date: </label>
               <output class="form-inline border border-dark" type="date" name="requestedDeliveryDate"
-                id="requestedDeliveryDate">
+                id="requestedDeliveryDate" style="padding:5px">
             </row>
           </div>
         </div>
@@ -282,15 +288,17 @@
         <div class="d-flex flex-column justify-content-center align-items-center">
           <div class="form-group form-inline">
             <label class="form-label" for="totalItems">Total Items: </label>
-            <output class="form-inline border border-dark" type="text" name="totalItems" id="totalItems">
+            <output class="form-inline border border-dark" type="text" name="totalItems" id="totalItems"
+              style="padding:5px">
           </div>
         </div>
 
-        <!-- Total Price of Order -->
+        <!-- Total Cost of Order -->
         <div class="d-flex flex-column justify-content-center align-items-center">
           <div class="form-group form-inline">
-            <label class="form-label" for="totalPrice">Total Price: </label>
-            <output class="form-inline border border-dark" type="text" name="totalPrice" id="totalPrice">
+            <label class="form-label" for="totalCost">Total Cost: </label>
+            <output class="form-inline border border-dark" type="text" name="totalCost" id="totalCost"
+              style="padding:5px">
           </div>
         </div>
 
@@ -300,23 +308,27 @@
             <row>
               <!-- Tax Exemption -->
               <label class="form-label" for="taxExemption">Tax Exemption: </label>
-              <output class="form-inline border border-dark" type="text" name="taxExemption" id="taxExemption">
+              <output class="form-inline border border-dark" type="text" name="taxExemption" id="taxExemption"
+                style="padding:5px">
             </row>
             <row>
               <!-- Taxes on Order -->
               <label class="form-label" for="totalTaxes">Tax: </label>
-              <output class="form-inline border border-dark" type="text" name="totalTaxes" id="totalTaxes">
+              <output class="form-inline border border-dark" type="text" name="totalTaxes" id="totalTaxes"
+                style="padding:5px">
             </row>
           </div>
         </div>
 
-        <!-- Total Cost of Order Including Taxes -->
+        <!-- Total Price of Order Including Taxes -->
         <div class="d-flex flex-column justify-content-center align-items-center">
           <div class="form-group form-inline">
-            <label class="form-label" for="totalCost">Total Cost: </label>
-            <output class="form-inline border border-dark" type="text" name="totalCost" id="totalCost">
+            <label class="form-label" for="totalPrice">Total Price: </label>
+            <output class="form-inline border border-dark" type="text" name="totalPrice" id="totalPrice"
+              style="padding:5px">
           </div>
         </div>
+
       </div>
       <!-- End of Order Summary -->
 
