Populate garment cards

--- a/frontend/src/designForm/index.html
+++ b/frontend/src/designForm/index.html
@@ -121,7 +121,7 @@
                 <label class="form-label col-sm-6" for="embroideryTotalCost">Total Cost: </label>
                 <div class="col-sm-5">
                   <output class="form-inline border border-dark" name="embroideryTotalCost" for="embroideryTotalCost"
-                    id="embroideryTotalCost" required="false">
+                    id="embroideryTotalCost" required="false" style="padding:5px">
                     Test</output>
                 </div>
               </div>
@@ -173,7 +173,7 @@
                 <label class="form-label col-sm-6" for="vinylizeTotalCost">Total Cost: </label>
                 <div class="col-sm-5">
                   <output class="form-inline border border-dark" name="vinylizeTotalCost" for="vinylizeTotalCost"
-                    id="vinylizeTotalCost" required="false">
+                    id="vinylizeTotalCost" required="false" style="padding:5px">
                     Test</output>
                 </div>
               </div>
@@ -225,7 +225,7 @@
                 <label class="form-label col-sm-6" for="otherTotalCost">Total Cost: </label>
                 <div class="col-sm-5">
                   <output class="form-inline border border-dark" name="otherTotalCost" for="otherTotalCost"
-                    id="otherTotalCost" required="false">
+                    id="otherTotalCost" required="false" style="padding:5px">
                     Test</output>
                 </div>
               </div>
@@ -386,7 +386,7 @@
                     <label class="form-label col-sm-6" for="garmentTotalCost">Garment Cost: </label>
                     <div class="col-sm-6">
                       <output class="form-inline border border-dark" name="garmentTotalCost" for="garmentTotalCost"
-                        id="garmentTotalCost" required="false">Test</output>
+                        id="garmentTotalCost" required="false" style="padding:5px">Test</output>
                     </div>
                   </div>
                 </div>
